--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,1 @@
-# find all files constituting this library
-file(GLOB signalsfiles
-  *.cpp)
-
-# this is a library
-add_library(signals ${signalsfiles})
+define_module(signals LIBRARY INCLUDES util LINKS boost)
