fixed module name for util, added include directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,1 @@
-define_module(signals LIBRARY LINKS utils boost)
+define_module(signals LIBRARY LINKS util boost INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/..)
