--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,1 @@
-define_module(signals LIBRARY LINKS util boost INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/..)
+define_module(signals OBJECT LINKS util boost INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/..)
